# ARGUS

./: .dockerignore  .env  .gitignore  LICENSE  README.md  agent.py  docker-compose.yml  docker-compose.yml.bak  front.html  pyproject.toml  requirements.txt
backend/: .gitignore  README.md
frontend/: .gitignore  Dockerfile  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  routeTree.gen.js  routeTree.gen.ts  theme.tsx  utils.js  utils.ts
frontend/src/client/: index.js  index.ts  sdk.gen.js  sdk.gen.ts  types.gen.ts
frontend/src/client/core/: ApiError.js  OpenAPI.js  OpenAPI.ts  request.ts
frontend/src/components/Common/: Navbar.js  Navbar.tsx  NotFound.js  NotFound.tsx  Pagination.tsx  Sidebar.js  Sidebar.tsx  SidebarItems.js  SidebarItems.tsx  UserActionsMenu.tsx  UserMenu.js  UserMenu.tsx
frontend/src/components/ui/: drawer.js  menu.js  password-input.js  toaster.js
frontend/src/hooks/: useAuth.js  useAuth.ts  useCustomToast.js
frontend/src/routes/: __root.js  _layout.js  _layout.tsx  login.js  login.tsx
frontend/src/routes/_layout/: index.js  index.tsx
server/: .gitignore  Dockerfile  README.md  alembic.ini  config.py  init_db.py  main.py  requirements.txt  schemas.py
server/api/: main.py
server/api/mobile/: main.py
server/api/mobile/routes/: certs.py  (+2 more)
server/api/routes/: auth.py  chart.py  health_check.py  hosts.py  login.py  pages.py
server/core/: db.py
server/migrations/alembic/: env.py
server/models/: host.py  user.py
server/src/old_pages/: login.html
server/src/pages/: index.html
(+538 files in other folders)
