[project]
name = "argus"
version = "0.1.0"
description = "Automated Real-time Global Universal Surveillance"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.8",
    "httpx>=0.28.1",
    "jinja2>=3.1.5",
    "psutil>=7.0.0",
    "starlette>=0.45.3",
    "uvicorn[standard]>=0.34.0",
]
